--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.13.2",
     "dompurify": "^3.3.1",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.7.2",
     "lucide-react": "^0.555.0",
     "quill": "^2.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.4.1",
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.6",
