--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,16 +11,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "googleapis": "^169.0.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.2",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "open": "^8.4.2"
   }
 }
