--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -2,20 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "Server.js",
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/app.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
-        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Authorization"
-      }
+      "source": "/(.*)",
+      "destination": "/Server.js"
     }
   ]
 }
