--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,15 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "Server.js",
-      "use": "@vercel/node"
-    }
-  ],
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/Server.js"
+      "destination": "/index.html"
     }
   ]
 }
